--- a/public/css/waiter.css
+++ b/public/css/waiter.css
@@ -1,4 +1,4 @@
-/*.colorRed{
+.colorRed{
  background-color: red;
 }
 
@@ -9,4 +9,4 @@ background-color: blue;
 .colorOrange{
 background-color: orange;
 
-}*/
+}
