--- a/views/days.handlebars
+++ b/views/days.handlebars
@@ -6,7 +6,7 @@
   <title>
     Waiter Availability
   </title>
-  <link type="text/css" rel="stylesheet.css" href="waiter.css"/>
+  <!-- <link type="text/css" rel="stylesheet.css" href="Css/waiter.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,12 +14,12 @@
 <style>
 h1{
 color:white;
-margin-left: 450px;
+margin-left: 430px;
 border: solid #DC4C46 10px;
-width: 345px;
+width: 365px;
 border-radius: -1px;
 background-color:#DC4C46;
-font-family:cursive;
+font-family:sans-serif;
 }
 body{
 
@@ -29,10 +29,70 @@ body{
 h4{
   margin-left: 410px;
  font-size: 35px;
- opacity: 0.2;
- font-family: fantasy;
+ opacity: 0.3;
+ font-family: sans-serif;
+ background-color: red;
+ width: 345px;
+ color:white;
+ border: solid red 10px;
+ border-radius: 5px;
+}
+
+.colorRed{
+ background-color: #009933;
+
 
 }
+
+.colorBlue{
+
+  background-color: #6666ff;
+}
+.colorOrange{
+background-color: #cc0000;
+
+}
+
+
+.fl-l
+{
+  float:left;
+  word-break: break-all;
+   width: 5%;
+   margin-left:250px;
+}
+
+#wrap{
+    width:auto;
+ margin:14px;
+  border:0px solid;
+ height:200px;
+  display:block;
+
+}
+#one {
+  background:#cc0000;
+  color:white;
+}
+
+#two {
+ background:#6666ff;
+ color:white;
+
+}
+
+#three {
+   background:#009933;
+   color:white;
+
+}
+.clear{
+  margin-left: 410px;
+
+
+
+}
+
 
 
 
@@ -43,9 +103,20 @@ h4{
 
   <body>
 
+
       <h1>Waiters Selected Days</h1>
 
 
+
+
+
+    <br>
+    <br>
+    <div id="wrap">
+        <div id="one" class="fl-l"> maximum</div>
+        <div id="two" class="fl-l"> less</div>
+        <div id="three" class="fl-l">enough</div>
+    <br>
     <br>
     <br>
     <br>
@@ -68,35 +139,59 @@ h4{
         <tbody>
           <tr>
 
-            <td class= {{day1Color}}>{{#each day1}}
+
+            <td class='{{colorM}}'>{{#each day1}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day2Color}}>{{#each day2}}
+
+
+            <td class="{{colorT}}">{{#each day2}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day3Color}}>{{#each day3}}
+
+
+            <td class="{{colorW}}">{{#each day3}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day4Color}}>{{#each day4}}
+
+
+            <td class="{{colorTH}}">{{#each day4}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day5Color}}>{{#each day5}}
+
+
+            <td class="{{colorF}}">{{#each day5}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day6Color}}>{{#each day6}}
+
+
+            <td class="{{colorS}}">{{#each day6}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
-            <td class= {{day7Color}}>{{#each day7}}
+
+
+            <td class="{{colorSU}}">{{#each day7}}
             <li style="color:white">{{this}}</li>
             {{/each}}</td>
+
           </tr>
         </tbody>
       </table>
     </div>
+    <div class='colorOrange'></div>
+    <div class="colorBlue"></div>
+    <div class="colorRed"></div>
   </form>
+
+  <form class="clear" action="/clear" method="post">
+    <button type="submit" class="btn-danger" style="margin-left:40px">clear</button>
+  </form>
+
   <br>
-  <hr>
-  <h4 style="color:#005960">THANK YOU FOR YOUR DAYS</h4>
-  <hr>
+  <br>
+  <br>
+  <h4 style="color:white">THANK YOU FOR YOUR DAYS</h4>
+
+
   </body>
 </html>
