--- a/views/waiter.handlebars
+++ b/views/waiter.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet.css" href="waiter.css"/>
+    <link rel="stylesheet.css" href="waiter.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -33,8 +33,9 @@ h2{
   width: 345px;
   border-radius: -1px;
   background-color: #4C6A92;
-  font-family:cursive;
+  font-family:sans-serif;
   text-align: center;
+  opacity: 0.6;
 
 
 
@@ -42,7 +43,6 @@ h2{
 
 .days{
 margin-left: 480px;
-
 
 
 
@@ -66,9 +66,27 @@ margin-left: 480px;
 
     </style>
   </head>
-  <h1>Waiter Availability</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <body>
+    <nav>
+   <div class="alert alert-success" role="alert"> #Waiters | <a href="/days">Work Days</a></div>
+ </nav>
+    <br>
+    <h1>Waiter Availability</h1>
     <br>
     <br>
 
