I dont know what to do

--- a/views/days.handlebars
+++ b/views/days.handlebars
@@ -73,21 +73,28 @@ background-color: #cc0000;
 #one {
   background:#cc0000;
   color:white;
+  border-radius: 4px;
+  text-align: center;
+
 }
 
 #two {
  background:#6666ff;
  color:white;
+ border-radius: 4px;
+ text-align: center;
 
 }
 
 #three {
    background:#009933;
    color:white;
+   border-radius: 4px;
+   text-align: center;
 
 }
 .clear{
-  margin-left: 410px;
+  margin-left: 25px;
 
 
 
